added jekyll to grunt

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,1 @@
-exclude: [styles.sass, Gemfile, Gemfile.lock, README.md]
+exclude: ['css/styles.sass', Gemfile, Gemfile.lock, README.md, node_modules, package.json, Gruntfile.js]
