moved actual website source into source folder; added a production build to grunt

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,1 @@
-exclude: ['css/styles.sass', Gemfile, Gemfile.lock, README.md, node_modules, package.json, Gruntfile.js]
+exclude: ['src/css/styles.sass', Gemfile, Gemfile.lock, README.md, node_modules, package.json, Gruntfile.js]
