--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-contrib-imagemin": "~0.7.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-sass": "~0.7.3",
-    "grunt-jekyll": "~0.4.2"
+    "grunt-jekyll": "~0.4.2",
+    "grunt-concurrent": "~0.5.0"
   }
 }
