--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-sass": "~0.7.3",
     "grunt-jekyll": "~0.4.2",
-    "grunt-concurrent": "~0.5.0"
+    "grunt-concurrent": "~0.5.0",
+    "grunt-autoprefixer": "~0.7.5"
   }
 }
